# story-writer

./: Book.cpp  Book.h  CMakeLists.txt  Equation.cpp  Equation.h  Page.cpp  Page.h  README.md
Reader/: Line.cpp  Line.h
Script/: AssignmentScript.h  BoolScript.cpp  BoolScript.h  CaseScript.cpp  CaseScript.h  ConditionalJumpScript.h  DisplayScript.cpp  DisplayScript.h  IfScript.cpp  IfScript.h  JumpScript.h  Script.h  ScriptVector.cpp  ScriptVector.h  VarScript.h  WhileScript.h
Variable/: Equation.cpp  Equation.h  Token.cpp  Token.h
